--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <img src="i12.jpg" class="txt11">
     <img src="i13.jpg" class="txt12">
  </div>  
- 
+ <p>Heyya World !</p>
 </body>
 </html>
